Update PocketTMF.html with comprehensive privacy statement

--- a/PocketTMF.html
+++ b/PocketTMF.html
@@ -12,7 +12,75 @@ description: Bookmark this to keep an eye on my project updates!
     <title>Pocket TMF Privacy Statement</title>
 </head>
 <body>
-    <h1>Pocket TMF Privacy Statement</h1>
-    <p>Bookmark this to keep an eye on my project updates!</p>
+    <h1>Privacy Statement</h1>
+    <h2>Pocket TMF Reference Model App</h2>
+    <p><strong>Last Updated: 07th June 2025</strong></p>
+
+    <h3>Overview</h3>
+    <p>Pocket TMF Reference Model is a reference application that provides access to the standardized Trial Master File (TMF) Reference Model Version 3.3.1. This privacy statement explains how our app handles your information.</p>
+
+    <h3>Information We Collect</h3>
+    <p>We do not collect any personal information. This app operates entirely offline and does not:</p>
+    <ul>
+        <li>Collect personal data such as names, email addresses, or contact information</li>
+        <li>Access your device's camera, microphone, or location services</li>
+        <li>Require user accounts or registration</li>
+        <li>Connect to external servers or databases</li>
+        <li>Track user behavior or usage analytics</li>
+        <li>Access your contacts, photos, or other personal files</li>
+    </ul>
+
+    <h3>Data Usage</h3>
+    <p>The app contains only:</p>
+    <ul>
+        <li><strong>Static Reference Content:</strong> Pre-loaded TMF Reference Model data (zones, sections, artifacts, and their definitions)</li>
+        <li><strong>Local App Preferences:</strong> Settings you configure (such as color scheme, theme mode, and app icon preferences) are stored locally on your device using iOS UserDefaults</li>
+    </ul>
+
+    <h3>Data Storage</h3>
+    <p>All data in this app is stored locally on your device:</p>
+    <ul>
+        <li><strong>Reference Model Data:</strong> The TMF content is built into the app and cannot be modified</li>
+        <li><strong>User Preferences:</strong> Your app settings (appearance preferences, selected color schemes, etc.) are stored locally using iOS standard UserDefaults and remain on your device</li>
+        <li><strong>No Cloud Storage:</strong> No information is transmitted to or stored on external servers</li>
+    </ul>
+
+    <h3>Third-Party Services</h3>
+    <p>This app does not integrate with any third-party services, analytics platforms, or advertising networks.</p>
+
+    <h3>Data Sharing</h3>
+    <p>We do not share any data because we do not collect any personal information. All app functionality operates locally on your device.</p>
+
+    <h3>Children's Privacy</h3>
+    <p>This app is safe for users of all ages as it does not collect any personal information or communicate with external services.</p>
+
+    <h3>Data Security</h3>
+    <p>Since no personal data is collected or transmitted:</p>
+    <ul>
+        <li>All app data remains on your local device</li>
+        <li>No network communications occur during normal app usage</li>
+        <li>Your privacy is protected by iOS security features</li>
+    </ul>
+
+    <h3>Your Rights</h3>
+    <p>As we do not collect personal information, there is no personal data to access, modify, or delete. You can:</p>
+    <ul>
+        <li>Reset app preferences by deleting and reinstalling the app</li>
+        <li>Change appearance settings within the app at any time</li>
+    </ul>
+
+    <h3>Changes to This Privacy Policy</h3>
+    <p>We may update this privacy policy from time to time. Any changes will be reflected in app updates and will maintain our commitment to not collecting personal information.</p>
+
+    <h3>Compliance</h3>
+    <p>This app complies with:</p>
+    <ul>
+        <li>Apple App Store Review Guidelines</li>
+        <li>iOS privacy requirements</li>
+        <li>COPPA (Children's Online Privacy Protection Act) as no personal information is collected</li>
+        <li>GDPR principles of data minimization (by collecting no personal data)</li>
+    </ul>
+
+    <p><strong>Note:</strong> This privacy statement reflects the current functionality of the Pocket TMF Reference Model app as a standalone, offline reference tool that does not collect, transmit, or store any personal user information.</p>
 </body>
 </html> 
