Add support contact information to PocketTMF.html

--- a/PocketTMF.html
+++ b/PocketTMF.html
@@ -82,5 +82,7 @@ description: Bookmark this to keep an eye on my project updates!
     </ul>
 
     <p><strong>Note:</strong> This privacy statement reflects the current functionality of the Pocket TMF Reference Model app as a standalone, offline reference tool that does not collect, transmit, or store any personal user information.</p>
+
+    <p>For any support please contact rtjonesdev@gmail.com</p>
 </body>
 </html> 
