--- a/PocketTMF_PlayStore.html
+++ b/PocketTMF_PlayStore.html
@@ -1,71 +1,121 @@
-# Privacy Statement
-## Pocket TMF App
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Pocket TMF App</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            color: #2196F3;
+            border-bottom: 2px solid #2196F3;
+            padding-bottom: 10px;
+        }
+        h2 {
+            color: #1976D2;
+            margin-top: 30px;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        li {
+            margin-bottom: 8px;
+        }
+        em {
+            color: #666;
+        }
+        a {
+            color: #2196F3;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <h1>Privacy Statement</h1>
+    <h2>Pocket TMF App</h2>
 
-*Last Updated: 7th June 2025*
+    <p><em>Last Updated: 7th June 2025</em></p>
 
-## Overview
-Pocket TMF is a reference application that provides access to the standardized Trial Master File (TMF) Reference Model Version 3.3.1. This privacy statement explains how our app handles your information.
+    <h2>Overview</h2>
+    <p>Pocket TMF is a reference application that provides access to the standardized Trial Master File (TMF) Reference Model Version 3.3.1. This privacy statement explains how our app handles your information.</p>
 
-## Information We Collect
-We do not collect any personal information. This app operates entirely offline and does not:
+    <h2>Information We Collect</h2>
+    <p>We do not collect any personal information. This app operates entirely offline and does not:</p>
+    <ul>
+        <li>Collect personal data such as names, email addresses, or contact information</li>
+        <li>Access your device's camera, microphone, or location services</li>
+        <li>Require user accounts or registration</li>
+        <li>Connect to external servers or databases</li>
+        <li>Track user behavior or usage analytics</li>
+        <li>Access your contacts, photos, or other personal files</li>
+    </ul>
 
-- Collect personal data such as names, email addresses, or contact information
-- Access your device's camera, microphone, or location services
-- Require user accounts or registration
-- Connect to external servers or databases
-- Track user behavior or usage analytics
-- Access your contacts, photos, or other personal files
+    <h2>Data Usage</h2>
+    <p>The app contains only:</p>
+    <ul>
+        <li>Static Reference Content: Pre-loaded TMF Reference Model data (zones, sections, artifacts, and their definitions)</li>
+        <li>Local App Preferences: Settings you configure (such as color scheme, theme mode, and app icon preferences) are stored locally on your device using Android SharedPreferences</li>
+    </ul>
 
-## Data Usage
-The app contains only:
+    <h2>Data Storage</h2>
+    <p>All data in this app is stored locally on your device:</p>
+    <ul>
+        <li>Reference Model Data: The TMF content is built into the app and cannot be modified</li>
+        <li>User Preferences: Your app settings (appearance preferences, selected color schemes, etc.) are stored locally using Android standard SharedPreferences and remain on your device</li>
+        <li>No Cloud Storage: No information is transmitted to or stored on external servers</li>
+    </ul>
 
-- Static Reference Content: Pre-loaded TMF Reference Model data (zones, sections, artifacts, and their definitions)
-- Local App Preferences: Settings you configure (such as color scheme, theme mode, and app icon preferences) are stored locally on your device using Android SharedPreferences
+    <h2>Third-Party Services</h2>
+    <p>This app does not integrate with any third-party services, analytics platforms, or advertising networks.</p>
 
-## Data Storage
-All data in this app is stored locally on your device:
+    <h2>Data Sharing</h2>
+    <p>We do not share any data because we do not collect any personal information. All app functionality operates locally on your device.</p>
 
-- Reference Model Data: The TMF content is built into the app and cannot be modified
-- User Preferences: Your app settings (appearance preferences, selected color schemes, etc.) are stored locally using Android standard SharedPreferences and remain on your device
-- No Cloud Storage: No information is transmitted to or stored on external servers
+    <h2>Children's Privacy</h2>
+    <p>This app is safe for users of all ages as it does not collect any personal information or communicate with external services.</p>
 
-## Third-Party Services
-This app does not integrate with any third-party services, analytics platforms, or advertising networks.
+    <h2>Data Security</h2>
+    <p>Since no personal data is collected or transmitted:</p>
+    <ul>
+        <li>All app data remains on your local device</li>
+        <li>No network communications occur during normal app usage</li>
+        <li>Your privacy is protected by Android security features</li>
+    </ul>
 
-## Data Sharing
-We do not share any data because we do not collect any personal information. All app functionality operates locally on your device.
+    <h2>Your Rights</h2>
+    <p>As we do not collect personal information, there is no personal data to access, modify, or delete. You can:</p>
+    <ul>
+        <li>Reset app preferences by clearing app data or uninstalling and reinstalling the app</li>
+        <li>Change appearance settings within the app at any time</li>
+    </ul>
 
-## Children's Privacy
-This app is safe for users of all ages as it does not collect any personal information or communicate with external services.
+    <h2>Changes to This Privacy Policy</h2>
+    <p>We may update this privacy policy from time to time. Any changes will be reflected in app updates and will maintain our commitment to not collecting personal information.</p>
 
-## Data Security
-Since no personal data is collected or transmitted:
+    <h2>Compliance</h2>
+    <p>This app complies with:</p>
+    <ul>
+        <li>Google Play Store Review Guidelines</li>
+        <li>Android privacy requirements</li>
+        <li>COPPA (Children's Online Privacy Protection Act) as no personal information is collected</li>
+        <li>GDPR principles of data minimization (by collecting no personal data)</li>
+    </ul>
 
-- All app data remains on your local device
-- No network communications occur during normal app usage
-- Your privacy is protected by Android security features
+    <h2>Note</h2>
+    <p>This privacy statement reflects the current functionality of the Pocket TMF app as a standalone, offline reference tool that does not collect, transmit, or store any personal user information.</p>
 
-## Your Rights
-As we do not collect personal information, there is no personal data to access, modify, or delete. You can:
-
-- Reset app preferences by clearing app data or uninstalling and reinstalling the app
-- Change appearance settings within the app at any time
-
-## Changes to This Privacy Policy
-We may update this privacy policy from time to time. Any changes will be reflected in app updates and will maintain our commitment to not collecting personal information.
-
-## Compliance
-This app complies with:
-
-- Google Play Store Review Guidelines
-- Android privacy requirements
-- COPPA (Children's Online Privacy Protection Act) as no personal information is collected
-- GDPR principles of data minimization (by collecting no personal data)
-
-## Note
-This privacy statement reflects the current functionality of the Pocket TMF app as a standalone, offline reference tool that does not collect, transmit, or store any personal user information.
-
-## Contact
-For any support please contact:
-
-[rtjonesdev@gmail.com](mailto:rtjonesdev@gmail.com) 
+    <h2>Contact</h2>
+    <p>For any support please contact:</p>
+    <p><a href="mailto:rtjonesdev@gmail.com">rtjonesdev@gmail.com</a></p>
+</body>
+</html> 
