--- a/PocketTMF_PlayStore.html
+++ b/PocketTMF_PlayStore.html
@@ -1,3 +1,9 @@
+---
+theme: jekyll-theme-minimal
+title: Pocket TMF Provacy Statement
+description: Bookmark this to keep an eye on my project updates!
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
